--- a/css/styles.css
+++ b/css/styles.css
@@ -24,21 +24,12 @@ header {
     padding: 10px 50px;
 }
 
-#logo {
-    width: 100px;
-}
-
-#logo img {
-    border-radius: 100%;
-    /*border: 2px solid white;*/
-}
-
 /*Estilos del hero*/
 #hero {
     position: relative;
 }
 
-#hero #dataScience {
+#hero #machineLearning {
     display: inline-block;
     width: 100%;
     /*opacity: 50%;*/
@@ -46,8 +37,13 @@ header {
 
 #hero .information-container {
     position: absolute;
-    top: 0;
+    top: 50%;
     left: 0;
+    transform: translateY(-50%);
+    display: flex;
+    width: 100%;
+    color: white;
+    padding: 0 50px;
 }
 
 #hero .information-container #fotoPersonal {
@@ -56,4 +52,64 @@ header {
 
 #hero .information-container #fotoPersonal img {
     border-radius: 100%;
+}
+
+#hero .information-container .information {
+    margin-left: 20px;
+    font-weight: bold;
+    width: calc(100% - 200px); /*son los 200 pixeles de la foto personal*/
+}
+
+#hero .information-container .information span {
+    color: #b5b5b5;
+    margin-bottom: 70px;
+    display: inline-block;
+}
+
+/*Estilos del main*/
+
+main {
+    padding: 100px;
+}
+
+main .social-icons {
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+    list-style: none;
+}
+
+main .social-icons li {
+    margin-left: 10px;
+}
+
+main .social-icons .social-icon * {
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+    align-items: center;
+    width: 100px;
+    padding: 15px;
+    border-radius: 20%;
+
+}
+
+header .header-container {
+    display: flex;
+    box-sizing: border-box;
+    height: 100px;
+    justify-content: space-between;
+}
+
+header .columna img {
+    /*width: 100%;*/
+    height: 60px;
+    box-sizing: border-box;
+    
+}
+header .columna{
+    display: flex;
+    flex: 0 0  auto;
+    padding: 30px;
+    box-sizing: border-box;
 }
